--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
@@ -14,7 +14,7 @@
 	<div class="split-row"></div>
 	
 	<div class="condition-area">
-		<table class="condition">
+		<table class="condition table-fixed">
 			<thead>
 		        <tr>
 		            <th th:text="#{HQP_L_ORDER_LIMIT}"></th>
@@ -50,71 +50,70 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<script type="application/javascript">
-	$(function(){
-		$tableObj = $("#TBL_grid").DataTable({
-			select: true,   			// row 선택 기능 켬
-			ordering: true, 			// 정렬 기능 켬
-			scrollY: 100,
-			//fixedColumns: { leftColumns: 8 },
-			columns : [
-				{data: "CRDAT", title: "[[#{HQP_L_PURCHASE_DATE}]]"},				
-				{data: "ENDAT", title: "[[#{HQP_L_PAYMENT_DUE_DATE}]]"},
-				{data: "TLAMT", title: "[[#{HQP_L_BILLING_AMT}]]", className: "right"},
-				{data: "RETAMT", title: "[[#{HQP_L_RETURN_AMT}]]", className: "right"},
-				{data: "CHAMT", title: "[[#{HQP_L_EXPECTED_PAYMENT_AMT}]]", className: "right"},
-				{data: "TOTAL", title: "[[#{HQP_L_DEPOSIT_AMT}]]", className: "right"},
-				{data: "ARREAR", title: "[[#{HQP_L_BALANCE}]]", className: "right"}
-			],
-			ajax: {
-				url: "/portal/iv/hq/parts/domestic/accounts/ap/list/data",
-				data: function(p)
-				{
-				},
-				dataSrc: function(response) 
-				{				
-					let data = response.RESULT;
-					
-					let list = data.list;
-					let summary = data.summary;
-					
-					$("#SUMMARY_1").text(summary.CREDAMT);
-					$("#SUMMARY_2").text(summary.DUEAMT);
-					$("#SUMMARY_3").text(summary.CURAMT);
-					$("#SUMMARY_4").text(summary.PROAMT);
-					$("#SUMMARY_5").text(summary.BALAMT);
-					
-					let length = list.length;
-					
-					for (let i=0; i < length; i++)
-					{
-						list[i].CRDAT = JpUtilsString.defaultString(list[i].CRDAT, "[[#{HQP_L_ORDER_IN_PROGRESS}]]");
-					};
-					
-					$("#totalRows").html(JpUtilsNumber.addComma(length) + " row(s).");
-					
-					return list;
-				}			
+<script>
+let $tableObj;
+$(function(){
+	$tableObj = $("#TBL_grid").DataTable({
+		select: true,   			// row 선택 기능 켬
+		ordering: true, 			// 정렬 기능 켬
+		scrollY: 100,
+		//fixedColumns: { leftColumns: 8 },
+		columns : [
+			{data: "CRDAT", title: "[[#{HQP_L_PURCHASE_DATE}]]"},				
+			{data: "ENDAT", title: "[[#{HQP_L_PAYMENT_DUE_DATE}]]"},
+			{data: "TLAMT", title: "[[#{HQP_L_BILLING_AMT}]]", className: "right"},
+			{data: "RETAMT", title: "[[#{HQP_L_RETURN_AMT}]]", className: "right"},
+			{data: "CHAMT", title: "[[#{HQP_L_EXPECTED_PAYMENT_AMT}]]", className: "right"},
+			{data: "TOTAL", title: "[[#{HQP_L_DEPOSIT_AMT}]]", className: "right"},
+			{data: "ARREAR", title: "[[#{HQP_L_BALANCE}]]", className: "right"}
+		],
+		ajax: {
+			url: "/portal/iv/hq/parts/domestic/accounts/ap/list/data",
+			data: function(p)
+			{
 			},
-			initComplete:function(settings, json) 
-			{			
-				ProgressBar.hide();
-			}
-		});
-		
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
-		
-		// Search 버튼 클릭
-		$("#BTN_search").on("click", function(){		
-			doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
-		});
-
-		function doSearch()
-		{
-			$tableObj.ajax.reload();
-		}	
+			dataSrc: function(response) 
+			{				
+				let data = response.RESULT;
+				
+				let list = data.list;
+				let summary = data.summary;
+				
+				$("#SUMMARY_1").text(summary.CREDAMT);
+				$("#SUMMARY_2").text(summary.DUEAMT);
+				$("#SUMMARY_3").text(summary.CURAMT);
+				$("#SUMMARY_4").text(summary.PROAMT);
+				$("#SUMMARY_5").text(summary.BALAMT);
+				
+				let length = list.length;
+				
+				for (let i=0; i < length; i++)
+				{
+					list[i].CRDAT = JpUtilsString.defaultString(list[i].CRDAT, "[[#{HQP_L_ORDER_IN_PROGRESS}]]");
+				};
+				
+				$("#totalRows").html(JpUtilsNumber.addComma(length) + " row(s).");
+				
+				return list;
+			}			
+		},
+		initComplete:function(settings, json) 
+		{			
+			ProgressBar.hide();
+		}
 	});
 	
-	</script>	
+	// Datatable grid 초기 설정 셋업
+	initGridTable($tableObj);
+});
+
+$("#BTN_search").on("click", function(){		
+	doSearch(); 
+});
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+}
+</script>	
 </th:block>
