--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
@@ -65,122 +65,126 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<script type="application/javascript">
-	let $tableObj;
-	$(function(){
-		Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
-	
-		$tableObj = $("#TBL_grid").DataTable({
-			select: {
-				selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
-		    },
-			ordering: true, 
-			scrollY: 100,
-			//fixedColumns: { leftColumns: 3 },
-			columns : [
-				{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]", className:"link"},//Claim No.
-				{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},// Line Item.
-				{data: "TEXT", 			title: "[[#{HQP_L_CLAIM_REASON}]]"},// Reason
-				{data: "ERDAT", 		title: "[[#{HQP_L_CLAIM_DOC_CREATE_DATE}]]"},// Doc. Date
-				{data: "VBELN2", 		title: "[[#{HQP_L_SALES_DOC_NO}]]", className: "link"},// Sales Doc. No.
-				{data: "T_NETWR", 		title: "[[#{HQP_L_TOTAL_AMOUNT}]]", className: "right"},// Total Amount
-				{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"},// Curr.
-				{data: "RFGSK_TX_T", 	title: "[[#{HQP_L_PROCESS_RESULT}]]"},// Process Result						
-				{data: "RFGSK_TX_T1", 	title: "[[#{HQP_L_RETURN_RESULT}]]"},// Return Status			
-				{data: "VBELN3", 		title: "[[#{HQP_L_FINAL_DOC}]]"}// Final Document		
-			],
-			ajax: {
-				url: "/portal/iv/hq/parts/domestic/claim/list/data",
-				data: function(p)
+<script>
+$(document).ready(function() {
+	_setPartAutocomplete($("#pPartNo"));
+});	
+
+let $tableObj;
+$(function(){
+	Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
+
+	$tableObj = $("#TBL_grid").DataTable({
+		select: {
+			selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+	    },
+		ordering: true, 
+		scrollY: 100,
+		//fixedColumns: { leftColumns: 3 },
+		columns : [
+			{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]", className:"link"},//Claim No.
+			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},// Line Item.
+			{data: "TEXT", 			title: "[[#{HQP_L_CLAIM_REASON}]]"},// Reason
+			{data: "ERDAT", 		title: "[[#{HQP_L_CLAIM_DOC_CREATE_DATE}]]"},// Doc. Date
+			{data: "VBELN2", 		title: "[[#{HQP_L_SALES_DOC_NO}]]", className: "link"},// Sales Doc. No.
+			{data: "T_NETWR", 		title: "[[#{HQP_L_TOTAL_AMOUNT}]]", className: "right"},// Total Amount
+			{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"},// Curr.
+			{data: "RFGSK_TX_T", 	title: "[[#{HQP_L_PROCESS_RESULT}]]"},// Process Result						
+			{data: "RFGSK_TX_T1", 	title: "[[#{HQP_L_RETURN_RESULT}]]"},// Return Status			
+			{data: "VBELN3", 		title: "[[#{HQP_L_FINAL_DOC}]]"}// Final Document		
+		],
+		ajax: {
+			url: "/portal/iv/hq/parts/domestic/claim/list/data",
+			data: function(p)
+			{
+				p.pComplaintNo 	= $("#pComplaintNo").val();
+				p.pReferenceNo	= $("#pReferenceNo").val();
+				p.pPartNo 		= $("#pPartNo").val();
+				p.pFromDate 	= $("#pFromDate").val();
+				p.pToDate 		= $("#pToDate").val();				
+			},
+			dataSrc: function(response) 
+			{				
+				let claimList = response.RESULT.claimList;
+				let claimReason1List = response.RESULT.claimReason1List;
+				
+				let returnData = new Array();
+										
+				for (let i=0, length=claimList.length; i<length; i++)
 				{
-					p.pComplaintNo 	= $("#pComplaintNo").val();
-					p.pReferenceNo	= $("#pReferenceNo").val();
-					p.pPartNo 		= $("#pPartNo").val();
-					p.pFromDate 	= $("#pFromDate").val();
-					p.pToDate 		= $("#pToDate").val();				
-				},
-				dataSrc: function(response) 
-				{				
-					let claimList = response.RESULT.claimList;
-					let claimReason1List = response.RESULT.claimReason1List;
-					
-					let returnData = new Array();
-											
-					for (let i=0, length=claimList.length; i<length; i++)
+					claimList[i].TEXT = "";
+						
+					for (let j=0, length1=claimReason1List.length; j<length1; j++)
 					{
-						claimList[i].TEXT = "";
-							
-						for (let j=0, length1=claimReason1List.length; j<length1; j++)
+						if (claimList[i].ZZCMPCD == claimReason1List[j].VALUE)
 						{
-							if (claimList[i].ZZCMPCD == claimReason1List[j].VALUE)
-							{
-								claimList[i].TEXT = claimReason1List[j].TEXT;							
-							}
+							claimList[i].TEXT = claimReason1List[j].TEXT;							
 						}
 					}
-
-					$("#totalRows").html(JpUtilsNumber.addComma(claimList.length) + " row(s).");
-
-					return claimList;
-				}			
-			},
-			initComplete:function(settings, json) 
-			{			
-				ProgressBar.hide();
-			}
-		});
-		
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
-		
-		// Search 버튼 클릭
-		$("#BTN_search").on("click", function(){		
-			doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
-		});
-		
-		//Input text 엔터 키 입력
-		$("#FORM_search input:text").on("keydown", function(event) {
-			if (event.keyCode == 13)
-			{
-				doSearch();
-			};
-		});		
-		
-		/*
-		 *  detail display submit(컴플레인 생성번호)
-		 */	
-		$("#TBL_grid tbody").on("click", "tr", function (e){				
-		    let tblGrid = $("#TBL_grid").DataTable();	    
-		    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
-			let rowData = tblGrid.row(this).data();
-			
-			if (index == 0)
-			{
-				let orderNo = rowData.VBELN;
-				
-				if (orderNo != null)
-				{
-					$("#orderNo").val(orderNo);			
-					$("#docDate").val(rowData.ERDAT);
-					$("#docType").val("A");
-					$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/claim/view").submit();
 				}
-			}
-			else if (index == 4)
-			{
-				let soNo = rowData.VBELN2;
-				
-				if (JpUtilsString.isNotEmpty(soNo))
-				{
-					Popup.open("/portal/iv/hq/parts/domestic/order/display/order/popup/view?orderNo=" + soNo);
-				};
-			};
-		});			
+
+				$("#totalRows").html(JpUtilsNumber.addComma(claimList.length) + " row(s).");
+
+				return claimList;
+			}			
+		},
+		initComplete:function(settings, json) 
+		{			
+			ProgressBar.hide();
+		}
 	});
 	
-	function doSearch()
-	{
-		$tableObj.ajax.reload();
-	}
-	</script>
+	// Datatable grid 초기 설정 셋업
+	initGridTable($tableObj);
+	
+	// Search 버튼 클릭
+	$("#BTN_search").on("click", function(){		
+		doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
+	});
+	
+	//Input text 엔터 키 입력
+	$("#FORM_search input:text").on("keydown", function(event) {
+		if (event.keyCode == 13)
+		{
+			doSearch();
+		};
+	});		
+	
+	/*
+	 *  detail display submit(컴플레인 생성번호)
+	 */	
+	$("#TBL_grid tbody").on("click", "tr", function (e){				
+	    let tblGrid = $("#TBL_grid").DataTable();	    
+	    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
+		let rowData = tblGrid.row(this).data();
+		
+		if (index == 0)
+		{
+			let orderNo = rowData.VBELN;
+			
+			if (orderNo != null)
+			{
+				$("#orderNo").val(orderNo);			
+				$("#docDate").val(rowData.ERDAT);
+				$("#docType").val("A");
+				$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/claim/view").submit();
+			}
+		}
+		else if (index == 4)
+		{
+			let soNo = rowData.VBELN2;
+			
+			if (JpUtilsString.isNotEmpty(soNo))
+			{
+				Popup.open("/portal/iv/hq/parts/domestic/order/display/order/popup/view?orderNo=" + soNo);
+			};
+		};
+	});			
+});
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+}
+</script>
 </th:block>	
