--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="condition-area">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQP_L_CLAIM_NO}"></th><!--Claim No  -->
@@ -56,153 +56,153 @@
 	</div>
 	<!-- /Text Area -->
 	
-	<script type="application/javascript">
-	let $tableObj;
-	
-	JpUtilsAjax.get({
-		url: "/portal/iv/hq/parts/domestic/claim/view/data",
-		data: { "pOrderNo": "[[${orderNo}]]", "pDocType": "[[${docType}]]" },		
-	    success: function(data, textStatus, jqXHR) 
-	    {
-			let itemList = data.RESULT.itemList;
-			let fileList = data.RESULT.fileList;
-			let reason1List = data.RESULT.reason1List;		
-			let reason2List = data.RESULT.reason2List;    	
-	
-	    	$("#ITEM_COUNT").html(itemList.length);		
-	    	
-			for (let i=0, length=itemList.length; i<length; i++)
-			{
-				itemList[i].FILE_NAME = "";
-				itemList[i].INT_NO = "";
-				itemList[i].DOCU_ITEM = "";
+<script>
+let $tableObj;
+
+JpUtilsAjax.get({
+	url: "/portal/iv/hq/parts/domestic/claim/view/data",
+	data: { "pOrderNo": "[[${orderNo}]]", "pDocType": "[[${docType}]]" },		
+    success: function(data, textStatus, jqXHR) 
+    {
+		let itemList = data.RESULT.itemList;
+		let fileList = data.RESULT.fileList;
+		let reason1List = data.RESULT.reason1List;		
+		let reason2List = data.RESULT.reason2List;    	
+
+    	$("#ITEM_COUNT").html(itemList.length);		
+    	
+		for (let i=0, length=itemList.length; i<length; i++)
+		{
+			itemList[i].FILE_NAME = "";
+			itemList[i].INT_NO = "";
+			itemList[i].DOCU_ITEM = "";
+			
+			for (let j=0, length1=reason1List.length; j<length1; j++)
+			{	
+				itemList[i].TEXT = "";
+				itemList[i].TEXT2 = "";	
+				itemList[i].FILE_TEXT = "";
 				
 				for (let j=0, length1=reason1List.length; j<length1; j++)
-				{	
-					itemList[i].TEXT = "";
-					itemList[i].TEXT2 = "";	
-					itemList[i].FILE_TEXT = "";
-					
-					for (let j=0, length1=reason1List.length; j<length1; j++)
-					{
-						if (itemList[i].COMPLAINT == reason1List[j].VALUE)
-						{
-							itemList[i].TEXT = reason1List[j].TEXT;							
-						}
-					}
-					
-					for (let k=0, length2=reason2List.length; k<length2; k++)
-					{
-						if (itemList[i].REASON == reason2List[k].VALUE)
-						{
-							itemList[i].TEXT2 = reason2List[k].TEXT;							
-						}
-					}				
-					
-					for (let l=0, length3=fileList.length; l<length3; l++)
-					{
-						if (itemList[i].ITEM == fileList[l].DOCU_ITEM)
-						{												
-							itemList[i].FILE_NAME = fileList[l].FILE_NAME;
-							itemList[i].INT_NO = fileList[l].INT_NO;
-							itemList[i].DOCU_ITEM = fileList[l].DOCU_ITEM;						
-						}
-					}									
-				}	
-			}
-		    	
-	    	$tableObj = $("#TBL_grid").DataTable({
-	    		select: true,// row 선택 기능 켬
-	    		ordering: true,// 정렬 기능 켬
-	    		scrollY: 100,
-	    		columns : [
-	    			{data: "REF_ORD", 		title: "[[#{HQP_L_REFERENCE_NO}]]"},// Reference No
-	    			{data: "MATERIAL", 		title: "[[#{HQP_L_PART_NO}]]"},// Part No
-	    			{data: "QTY", 			title: "[[#{HQP_L_QTY}]]"},// Qty	
-	    			{data: "TEXT", 			title: "[[#{HQP_L_REASON1}]]"},// Reason1
-	    			{data: "TEXT2", 		title: "[[#{HQP_L_REASON2}]]"},// Reason2																										
-	    			{data: "COMPLAINT_DESC",title: "[[#{HQP_L_ADDITIONAL_TEXT}]]"},// Text
-	    			{data: "RCOMMENT", 		title: "[[#{HQP_L_COMMENT}]]"},// Comment
-	    			{data: "FILE_NAME", 	title: "[[#{HQP_L_ATTACHED_FILE}]]", className:'link'}, // Attached File	
-	    			{data: "ZZDEALDT", 		title: "[[#{HQP_L_ORIGIN_DOC_DATE}]]"}, // Origin Doc. Date
-	    			{data: "INT_NO", 		title: "INT_NO(Hidden)"},
-	    			{data: "DOCU_ITEM",		title: "DOCU_ITEM(Hidden)"}    			
-	    		],  	
-	    		columnDefs: [
-	    			{ 
-	    				"targets": [ 9, 10 ],
-	                    "visible": false,				
-	    			}			
-	    		],	    		    		
-	    		data: itemList,
-	    		initComplete:function(settings, json) 
-	    		{			
-	    			ProgressBar.hide();
-	    		}
-	    	});
-	    	
-			// Datatable grid 초기 설정 셋업
-			initGridTable($tableObj);
-			
-			$("#TBL_grid tbody").on("click", "tr", function (e){
-			    let tblGrid = $("#TBL_grid").DataTable();	    
-			    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
-				let rowData = tblGrid.row(this).data();
-				
-				if (index == 4)
-				{	
-					let desc = $(this).text();
-					if (desc.length > 0)
-					{
-						let taDiv = $("#textareaDiv");
-						let tmpTa = $("#textareaDiv textarea");
-				
-					    if (taDiv.css("display") == "none")
-					    {
-							tmpTa.empty();
-							tmpTa.text(desc);
-				
-							taDiv.css({
-								"display":"block",
-								"position":"absolute",
-								"top":$(this).offset().top+20,
-								"left":$(this).offset().left
-							});
-						}
-					    else
-					    {
-							taDiv.css("display","none");
-							tmpTa.text(desc);
-						}
-					}	
-				}		
-				else if (index == 7)
 				{
-					let fileName = rowData.FILE_NAME;
-
-					if (fileName != null)
+					if (itemList[i].COMPLAINT == reason1List[j].VALUE)
 					{
-						$("#fileName").val(fileName);
-						$("#orderNo").val(rowData.REF_ORD);		
-						$("#intNo").val(rowData.INT_NO);
-						$("#docuItem").val(rowData.DOCU_ITEM);										
-						$("#FORM_download").attr("action", "/portal/iv/hq/parts/domestic/claim/download/attachment").submit();
+						itemList[i].TEXT = reason1List[j].TEXT;							
 					}
 				}
-			}).mouseout(function(){
-				 hideTextArea();
-			});			
-	    }
-	});
-	
-	$("#BTN_print").on("click", function() {
-		document.location.href = "/portal/iv/hq/parts/domestic/claim/download/doc?orderNo=[[${orderNo}]]&docType=[[${docType}]]";
-	});
-	
-	$("#BTN_back").on("click", function() {
-		$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/claim/list").submit();
-	});
-	
-	</script>	
+				
+				for (let k=0, length2=reason2List.length; k<length2; k++)
+				{
+					if (itemList[i].REASON == reason2List[k].VALUE)
+					{
+						itemList[i].TEXT2 = reason2List[k].TEXT;							
+					}
+				}				
+				
+				for (let l=0, length3=fileList.length; l<length3; l++)
+				{
+					if (itemList[i].ITEM == fileList[l].DOCU_ITEM)
+					{												
+						itemList[i].FILE_NAME = fileList[l].FILE_NAME;
+						itemList[i].INT_NO = fileList[l].INT_NO;
+						itemList[i].DOCU_ITEM = fileList[l].DOCU_ITEM;						
+					}
+				}									
+			}	
+		}
+	    	
+    	$tableObj = $("#TBL_grid").DataTable({
+    		select: true,// row 선택 기능 켬
+    		ordering: true,// 정렬 기능 켬
+    		scrollY: 100,
+    		columns : [
+    			{data: "REF_ORD", 		title: "[[#{HQP_L_REFERENCE_NO}]]"},// Reference No
+    			{data: "MATERIAL", 		title: "[[#{HQP_L_PART_NO}]]"},// Part No
+    			{data: "QTY", 			title: "[[#{HQP_L_QTY}]]"},// Qty	
+    			{data: "TEXT", 			title: "[[#{HQP_L_REASON1}]]"},// Reason1
+    			{data: "TEXT2", 		title: "[[#{HQP_L_REASON2}]]"},// Reason2																										
+    			{data: "COMPLAINT_DESC",title: "[[#{HQP_L_ADDITIONAL_TEXT}]]"},// Text
+    			{data: "RCOMMENT", 		title: "[[#{HQP_L_COMMENT}]]"},// Comment
+    			{data: "FILE_NAME", 	title: "[[#{HQP_L_ATTACHED_FILE}]]", className:'link'}, // Attached File	
+    			{data: "ZZDEALDT", 		title: "[[#{HQP_L_ORIGIN_DOC_DATE}]]"}, // Origin Doc. Date
+    			{data: "INT_NO", 		title: "INT_NO(Hidden)"},
+    			{data: "DOCU_ITEM",		title: "DOCU_ITEM(Hidden)"}    			
+    		],  	
+    		columnDefs: [
+    			{ 
+    				"targets": [ 9, 10 ],
+                    "visible": false,				
+    			}			
+    		],	    		    		
+    		data: itemList,
+    		initComplete:function(settings, json) 
+    		{			
+    			ProgressBar.hide();
+    		}
+    	});
+    	
+		// Datatable grid 초기 설정 셋업
+		initGridTable($tableObj);
+		
+		$("#TBL_grid tbody").on("click", "tr", function (e){
+		    let tblGrid = $("#TBL_grid").DataTable();	    
+		    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
+			let rowData = tblGrid.row(this).data();
+			
+			if (index == 4)
+			{	
+				let desc = $(this).text();
+				if (desc.length > 0)
+				{
+					let taDiv = $("#textareaDiv");
+					let tmpTa = $("#textareaDiv textarea");
+			
+				    if (taDiv.css("display") == "none")
+				    {
+						tmpTa.empty();
+						tmpTa.text(desc);
+			
+						taDiv.css({
+							"display":"block",
+							"position":"absolute",
+							"top":$(this).offset().top+20,
+							"left":$(this).offset().left
+						});
+					}
+				    else
+				    {
+						taDiv.css("display","none");
+						tmpTa.text(desc);
+					}
+				}	
+			}		
+			else if (index == 7)
+			{
+				let fileName = rowData.FILE_NAME;
+
+				if (fileName != null)
+				{
+					$("#fileName").val(fileName);
+					$("#orderNo").val(rowData.REF_ORD);		
+					$("#intNo").val(rowData.INT_NO);
+					$("#docuItem").val(rowData.DOCU_ITEM);										
+					$("#FORM_download").attr("action", "/portal/iv/hq/parts/domestic/claim/download/attachment").submit();
+				}
+			}
+		}).mouseout(function(){
+			 hideTextArea();
+		});			
+    }
+});
+
+$("#BTN_print").on("click", function() {
+	document.location.href = "/portal/iv/hq/parts/domestic/claim/download/doc?orderNo=[[${orderNo}]]&docType=[[${docType}]]";
+});
+
+$("#BTN_back").on("click", function() {
+	$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/claim/list").submit();
+});
+
+</script>	
 </th:block>
 	
