--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/alternative_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/alternative_list.html
@@ -6,10 +6,9 @@
 	
 <th:block layout:fragment="content">	
 <div class="block-header">
-	<div class="block-title" th:text="#{DIVUK_TXT_0028}"></div><!-- Alternative List  -->
+	<div class="block-title" th:text="#{HQP_T_ALTERNATIVE_LIST}"></div><!-- Alternative List  -->
 	<div class="block-button-area">
-		<button id="BTN_search" type="button" th:text="#{DIVUK_BTN_0012}"></button><!-- Search -->
-		<!-- button id="BTN_close" type="button" th:text="#{DIVUK_BTN_0005}"></button><!-- Close -->
+		<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
 	</div>	
 </div>	
 <div class="condition-area">
@@ -17,11 +16,11 @@
 <table class="condition">
 	<tbody>
 		<tr>
-			<th th:text="#{DIVUK_LB_0042}"></th><!--Part No.  -->
+			<th th:text="#{HQP_L_PART_NO}"></th><!--Part No.  -->
 			<td colspan="3">			
 				<div class="input-area">
 					<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" th:value="${pPartNo}">
-					<button class="btn-popup2" type="button" onclick="searchParts();"></button>
+					<button class="btn-popup2" type="button" onclick="_showPartSearch($('#pPartNo').val());"></button>
 				</div>										
 			</td>
 		</tr>
@@ -43,66 +42,70 @@
 </div>
 
 <script>
-var $tableObj;
-var totalRows = 0;
+$(document).ready(function() {
+	_setPartAutocomplete($("#pPartNo"));
+});
 
+let $tableObj;
 $(function(){	
 	$tableObj = $("#TBL_grid").DataTable({
 		select: true,   			
 		ordering: true, 
 		scrollY: 100,
 		columns : [						
-			{data: "NMATNR", 		title: "[[#{DIVUK_LB_0042}]]"	},	//Part No 
-			{data: "AMATNR", 		title: "[[#{DIVUK_LB_0082}]]"	},	//Alternative
-			{data: "AQTY", 			title: "[[#{DIVUK_LB_0056}]]"	}	//Qty
+			{data: "NMATNR",	title: "[[#{HQP_L_PART_NO}]]"},//Part No
+			{data: "AMATNR", 	title: "[[#{HQP_L_ALTERNATIVE}]]"},//Alternative
+			{data: "AQTY", 		title: "[[#{HQP_L_QTY}]]"}//Qty
 		],
 		ajax: {
-			url: "/portal/corp/uk/scm/parts/info/alternative_popup_list/data",
+			url: "/portal/iv/hq/parts/domestic/info/alternative_list/data",
 			data: function(p)
 			{				
 				p.pPartNo = $("#pPartNo").val();
 			},
 			dataSrc: function(response) 
 			{				
-				var data = response.RESULT;
-				var returnData = new Array();
+				let data = response.RESULT;
 				
-				totalRows = data.length;
+				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				
 				return data;
 			}
+		},
+		initComplete:function(settings, json) 
+		{			
+			ProgressBar.hide();
 		}
-	}).on("draw.dt", function() {
-		$("#totalRows").html(JpUtilsNumber.addComma(totalRows) + " row(s).");
-		ProgressBar.hide();
-	});		
-	
-	// window 리사이즈시 그리드 높이 다시 맞춤. (그리드의 parent 요소의 높이에 맞춤)
-	installDataTableResizer($tableObj, $("#AREA_grid"));
-	
-	// dataTable 버그 수정.
-	installDataTableBugFix("TBL_grid");
-
-	// Search 버튼 클릭
-	$("#BTN_search").on("click", function(){		
-		doSearch(); 
 	});
-});	
+	
+	// Datatable grid 초기 설정 셋업
+	initGridTable($tableObj);
+});
+
+$("#BTN_search").on("click", function(){		
+	doSearch(); 
+});
+
+$("#pPartNo").on("keydown", function(event) {
+	if (event.keyCode == 13)
+	{
+		if ($.trim($("#pPartNo").val()) != "")
+		{
+			doSearch();	
+		};
+	};
+});
 
 function doSearch()
 {
 	$tableObj.ajax.reload();
-}
+};
 
-/*
- * code(parts)변경 popup	 
- */ 	
-function searchParts(){
-	var param = "pPartNo=" + $("#pPartNo").val();
-	Popup.open("/portal/corp/uk/scm/parts/info/parts_number_popup_list?" + param, 700, 600);	
-}
-
-$("#BTN_close").on("click", function(){
-	self.close();	
-});
+//showPartSearch() callback 함수
+function _callbackPartSearch(partNo)
+{
+	$("#pPartNo").val(partNo);
+	doSearch();
+};
 </script>	
 </th:block>
