--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -5,15 +5,6 @@
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 
 <th:block layout:fragment="content">
-
-<style>
-.ui-menu-item .ui-menu-item-wrapper.ui-state-active {
-    background: #B2E4D7 !important;
-    font-weight: bold !important;
-    color: #000 !important;
-} 
-</style>
-
 <div class="block-header">
 	<div class="block-title" th:text="#{HQP_T_PARTS_INFO}"></div><!-- Parts Info. -->
 	<div class="block-button-area">
@@ -56,7 +47,7 @@
 				<span id="NOT_SERVICE_REASON"></span>
 				
 				<span id="AREA_notServiceReason" style="display:none;">
-					<button id="BTN_notServiceReason" class="btn-popup2" type="button" onclick="showMoreInfoPopup(this);"></button>
+					<button class="btn-popup2" type="button" onclick="_showNotServiableReason($('#pPartNo').val());"></button>
 				</span>
 			</td>
 		</tr>		
@@ -121,21 +112,16 @@
 <div class="split-row"></div>
 <div class="condition-area">
 	<div class="condition-title" th:text="#{HQP_L_SUPPLY_PART_PRICE_INFO}"></div>
-	<table class="condition">
+	<table class="condition table_fixed">
 		<thead>
 	        <tr>
+	        	<th th:text="#{HQP_L_ORDER_SCALE_QTY}"></th><!-- Scale Quantity -->
 	            <th th:text="#{HQP_L_UOM}"></th><!-- UoM -->
 	            <th th:text="#{HQP_L_LIST_PRICE}"></th><!--List Price  -->                        
 	            <th th:text="#{HQP_L_STOCK_ORDER_NET_PRICE}"></th><!--Stock Order (Stock Order)  -->
 	        </tr>
 	     </thead>
-	     <tbody>
-			<tr style="height:33px;">
-				<td id="MEINS"></td>
-				<td id="LPRICE_NETPR"></td>
-				<td id="YUSO" class="hidden"></td>						
-			</tr>
-		</tbody>        
+	     <tbody class="scale-list"></tbody>        
 	</table>	
 </div>	
 <script>
@@ -168,23 +154,26 @@ function doSearch()
 	 	success: function(data, textStatus, jqXHR) 
     	{
 	    	let result = data.RESULT;	    	
-	    	let items = result.items;
+	    	let partInfo = result.partInfo;
 	    	
-	    	if (items.length == 0)
+	    	if (JpUtilsObject.isNull(partInfo))
 	    	{
 	    		alert("[[#{HQP_M_EMPTY_RESULT}]]");
 	    		document.location.reload();
-	    	};	    	
+	    	};
 	    	
-			$("#MAKTX").html(items[0].MAKTX);// Part No Desc
-			$("#STOCK").html(items[0].STOCK);// Stock
-			$("#SVRCD").html(items[0].SVRCD);// Serviceable
+	    	let uom = partInfo.MEINS;
+	    	let currency = partInfo.WAERS;
+	    	
+			$("#MAKTX").html(partInfo.MAKTX);// Part No Desc
+			$("#STOCK").html(partInfo.STOCK);// Stock
+			$("#SVRCD").html(partInfo.SVRCD);// Serviceable
 			
 			// Not Service Reason
-			let notcd = JpUtilsString.trimToEmpty(items[0].NOTCD);
+			let notcd = JpUtilsString.trimToEmpty(partInfo.NOTCD);
 			$("#NOT_SERVICE_REASON").html("");
 			
-			if (notcd != "")
+			if (JpUtilsString.isNotEmpty(notcd))
 			{
 				if (notcd == "MUL")
 				{
@@ -195,96 +184,102 @@ function doSearch()
 					$("#AREA_notServiceReason").hide();
 				};
 				
-				$("#NOT_SERVICE_REASON").html(notcd + ":" + items[0].NOTCD_T);
+				$("#NOT_SERVICE_REASON").html(notcd + ":" + partInfo.NOTCD_T);
 			};
 			
 			//Sales Lot
-			$("#AUMNG").html(items[0].AUMNG + " " + items[0].MEINS);
+			$("#AUMNG").html(partInfo.AUMNG + " " + uom);
 
 			// Model
-			let model = JpUtilsString.trimToEmpty(items[0].MDLNM);
+			let model = JpUtilsString.trimToEmpty(partInfo.MDLNM);
 			$("#M_MATNR").html("");
 			$("#AREA_model").hide();
 
-			if (model != "")
+			if (JpUtilsString.isNotEmpty(model))
 			{
 				$("#M_MATNR").html(model);
 				$("#AREA_model").show();
 			};
 			
 			// Product Hierarchy
-			$("#PRODH_T").html(items[0].PRODH_T+" ["+items[0].PRODH+"]");
+			$("#PRODH_T").html(partInfo.PRODH_T + " [" + partInfo.PRODH + "]");
 			
 			// Open Qty
-			let openQty = JpUtilsString.trimToEmpty(items[0].OPENQ);
+			let openQty = JpUtilsString.trimToEmpty(partInfo.OPENQ);
 			$("#KWMENG").html("");			
 			
-			if (openQty != "")
+			if (JpUtilsString.isNotEmpty(openQty))
 			{
-				$("#KWMENG").html(openQty + " " + items[0].MEINS);	
+				$("#KWMENG").html(openQty + " " + uom);	
 			};
 			
 			// Net Weight
-			$("#NTGEW").html(items[0].NTGEW + " " + items[0].GEWEI);
+			$("#NTGEW").html(partInfo.NTGEW + " " + partInfo.GEWEI);
 
-			// Gross Weight
-			$("#BRGEW").html(items[0].BRGEW + " " + items[0].GEWEI);			
-			
 			// Purchase Lead Time
-			$("#PLIFZ").html(items[0].PLIFZ);
+			$("#PLIFZ").html(partInfo.PLIFZ);			
+			
+			// Gross Weight
+			$("#BRGEW").html(partInfo.BRGEW + " " + partInfo.GEWEI);			
 			
 			//Direct Delivery
-			$("#C_MTPOS").html(items[0].C_MTPOS);
+			$("#C_MTPOS").html(partInfo.C_MTPOS);
 			
 			//Price Applied Date
-			$("#DATAB").html(items[0].DATAB);
+			$("#DATAB").html(partInfo.DATAB);
 			
 			//Stock Location
-			$("#LADGR").html(items[0].LADGR);
+			$("#LADGR").html(partInfo.LADGR);
 
 			//Supply Part No.
-			let supplyPartsNo = JpUtilsString.trimToEmpty(items[0].SUPNR);
+			let supplyPartsNo = JpUtilsString.trimToEmpty(partInfo.SUPNR);
 			$("#REPNR").html("");
 			$("#AREA_substitution").hide();
 
-			if (supplyPartsNo != "")
+			if (JpUtilsString.isNotEmpty(supplyPartsNo))
 			{
 				$("#REPNR").html(supplyPartsNo);
 				$("#AREA_substitution").show();
 			};
 			
 			//Stock of Supply Part
-			let leadMes = $.trim(items[0].LEAD_MES);
+			let leadMes = $.trim(partInfo.LEAD_MES);
 			if (leadMes != "")
 			{
-				$("#STOCKP").html(items[0].STOCKP + " " + leadMes);
+				$("#STOCKP").html(partInfo.STOCKP + " " + leadMes);
 			}
 			else
 			{
-				$("#STOCKP").html(items[0].STOCKP);
+				$("#STOCKP").html(partInfo.STOCKP);
 			};
 			
 			//Bulletin
 			$("#BULLETIN").html("");
-			if (JpUtilsString.equals(items[0].BULLETIN, "X"))
+			if (JpUtilsString.equals(partInfo.BULLETIN, "X"))
 			{
 				$("#BULLETIN").html("Y");
 			};
 			
 			//AM Development Part
-			$("#AM_PART_NO").html(JpUtilsString.trimToEmpty(items[0].AM_PART_NO));
+			$("#AM_PART_NO").html(JpUtilsString.trimToEmpty(partInfo.AM_PART_NO));
 			
 			//KIT Availability
-			$("#EXP_AVQ").html(JpUtilsString.trimToEmpty(items[0].EXP_AVQ));
+			$("#EXP_AVQ").html(JpUtilsString.trimToEmpty(partInfo.EXP_AVQ));
 			
-			//UoM
-			$("#MEINS").html(JpUtilsString.trimToEmpty(items[0].MEINS));
+			/*
+			 * Scale List
+			 */
+			let scale = "";
+			$.each(result.scaleList.reverse(), function(index, item) {
+				scale += "<tr>";
+				scale += "	<td>" + item.OPENQ + "</td>";
+				scale += "	<td>" + item.MEINS + "</td>";
+				scale += "	<td>" + item.FINAL_LPRICE + " " + currency + "</td>";
+				scale += "	<td><span class='hidden LPRICE'>" + item.LPRICE + " " + currency + "</span></td>";
+				scale += "</tr>";
+			});
 			
-			//List Price
-			$("#LPRICE_NETPR").html(JpUtilsString.defaultString(items[0].LPRICE2, "0") + " " + items[0].WAERS);
-			
-			//List Price(Stock)
-			$("#YUSO").html(JpUtilsString.defaultString(items[0].LPRICE, "0") + " " + items[0].WAERS);
+			$(".scale-list").html(scale);
     	},
     	complete: function(jqXHR, textStatus)
     	{
@@ -294,7 +289,7 @@ function doSearch()
 }
 
 $("#BTN_calc").on("click", function() {
-	$("#YUSO").toggle();
+	$(".scale-list .LPRICE").toggle();
 });	
 
 //Search 버튼 클릭
@@ -303,8 +298,6 @@ $("#BTN_search").on("click", function(){
 });
 
 $("#pPartNo").on("keydown", function(event) {
-	$("#pPartNo").val($("#pPartNo").val().toUpperCase());
-
 	if (event.keyCode == 13)
 	{
 		if ($.trim($("#pPartNo").val()) != "")
@@ -313,22 +306,6 @@ $("#pPartNo").on("keydown", function(event) {
 		};
 	};
 });
-
-/**
- * 이미지 클릭시 대체품, Models applied by part, Controlling part 
- * 리스트 popup띄움
- */	
-function showMoreInfoPopup(obj)
-{
-	if ($.trim($("#pPartNo").val()).length > 0)
-	{
-		Popup.open("/portal/iv/hq/parts/domestic/info/popup/alternative_list?pPartNo=" + $("#pPartNo").val(), 700, 500);
-	}
-	else
-	{
-		$("#pPartNo").focus();	
-	};
-}
 
 //showPartSearch() callback 함수
 function _callbackPartSearch(partNo)
