--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
@@ -70,115 +70,117 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<script type="application/javascript">
-	$(function(){
-		let orderComponent = new OrderComponent();
-		orderComponent.makeOrderType($(".order-type"), "pOrderType", "");
+<script>
+$(document).ready(function() {
+	_setPartAutocomplete($("#pOrderPartNo"));
+});
+
+let $tableObj;
+$(function(){
+	let orderComponent = new OrderComponent();
+	orderComponent.makeOrderType($(".order-type"), "pOrderType", "");
+	
+	Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
 		
-		Calendar.makeBeetweenCalendar($("#pFromDate"), "[[${pFromDate}]]", $("#pToDate"), "[[${pToDate}]]");
-			
-		$tableObj = $("#TBL_grid").DataTable({
-			select: {
-				selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
-		    },
-			ordering: true,// 정렬 기능 켬
-			scrollY: 100,
-			//fixedColumns: { leftColumns: 8 },
-			columns : [
-				{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},	//Order<br>Type				
-				{data: "AUDAT", 		title: "[[#{HQP_L_ORDER_DATE}]]"},	//Order Date				
-				{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"}, //Order No.
-				{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"}, //Line Item 
-				{data: "MATNR_SO", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"}, //Order Part No.
-				{data: "MATNR_SH", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"}, //Supply Part No
-				{data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"}, //Description
-				{data: "KWMENG_SO", 	title: "[[#{HQP_L_ORDER_QTY}]]", className: "right"}, //Order Qty
-				{data: "KWMENG_SH", 	title: "[[#{HQP_L_SHIPMENT_COMPLETE_QTY}]]", className: "right"}, //S.Completion Qty
-				{data: "KWMENG", 		title: "[[#{HQP_L_BACKORDER_QTY}]]", className: "right"}, //B/O Quantity
-				{data: "VRKME", 		title: "[[#{HQP_L_UOM}]]"}, //UoM,
-				{data: "PRETD",			title: "[[#{HQP_L_ETD}]]"}, //ETD Comment
-				{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"}	//P.O. No.
-			],
-			ajax: {
-				url: "/portal/iv/hq/parts/domestic/order/backorder/list/data",
-				data: function(p)
-				{
-					p.pOrderNo 		= $("#pOrderNo").val();
-					p.pOrderType	= $("#pOrderType").val();
-					p.pPoNo 		= $("#pPoNo").val();
-					p.pOrderPartNo 	= $("#pOrderPartNo").val();
-					p.pFromDate 	= $("#pFromDate").val();
-					p.pToDate 		= $("#pToDate").val();				
-				},
-				dataSrc: function(response) 
-				{				
-					let data = response.RESULT;
-											
-					for (let i=0, length=data.length; i<length; i++)
-					{
-						let etd = $.trim(data[i].PRETD);
-						let etdat = $.trim(data[i].ETDAT);					
-										
-						if (etd == "0000-00-00")
-						{
-							etd = "";						
-						}
-						
-						data[i].ETDAT = etdat;
-						
-						let gubun = data[i].GUBUN;
-						let etdDesc = etd;
-						
-						if ("F" == gubun)
-						{
-							etdDesc = "All available";												
-						}
-						else if ("P" == gubun)
-						{
-							etdDesc = "Partially available";												
-						}
-						
-						data[i].PRETD = etdDesc;
-					};		
-					
-					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
-					
-					return data;
-				}			
-			},
-			initComplete:function(settings, json) 
-			{			
-				ProgressBar.hide();
-			}
-		});
-		
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
-		
-		// Search 버튼 클릭
-		$("#BTN_search").on("click", function(){		
-			doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
-		});
-		
-		//Input text 엔터 키 입력
-		$("#FORM_search input:text").on("keydown", function(event) {
-			if (event.keyCode == 13)
+	$tableObj = $("#TBL_grid").DataTable({
+		select: {
+			selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+	    },
+		ordering: true,// 정렬 기능 켬
+		scrollY: 100,
+		//fixedColumns: { leftColumns: 8 },
+		columns : [
+			{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},	//Order<br>Type				
+			{data: "AUDAT", 		title: "[[#{HQP_L_ORDER_DATE}]]"},	//Order Date				
+			{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"}, //Order No.
+			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"}, //Line Item 
+			{data: "MATNR_SO", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"}, //Order Part No.
+			{data: "MATNR_SH", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"}, //Supply Part No
+			{data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"}, //Description
+			{data: "KWMENG_SO", 	title: "[[#{HQP_L_ORDER_QTY}]]", className: "right"}, //Order Qty
+			{data: "KWMENG_SH", 	title: "[[#{HQP_L_SHIPMENT_COMPLETE_QTY}]]", className: "right"}, //S.Completion Qty
+			{data: "KWMENG", 		title: "[[#{HQP_L_BACKORDER_QTY}]]", className: "right"}, //B/O Quantity
+			{data: "VRKME", 		title: "[[#{HQP_L_UOM}]]"}, //UoM,
+			{data: "PRETD",			title: "[[#{HQP_L_ETD}]]"}, //ETD Comment
+			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"}	//P.O. No.
+		],
+		ajax: {
+			url: "/portal/iv/hq/parts/domestic/order/backorder/list/data",
+			data: function(p)
 			{
-				doSearch();
-			};
-		});	
-			
-		$("#BTN_download").on("click", function() {
-			let gridFileDownload = new GridFileDownload($tableObj);
-			gridFileDownload.fileName = "Backorder_List";
-			gridFileDownload.excelDownload();
-		});
-		
-		function doSearch()
-		{
-			$tableObj.ajax.reload();
-		}	
+				p.pOrderNo 		= $("#pOrderNo").val();
+				p.pOrderType	= $("#pOrderType").val();
+				p.pPoNo 		= $("#pPoNo").val();
+				p.pOrderPartNo 	= $("#pOrderPartNo").val();
+				p.pFromDate 	= $("#pFromDate").val();
+				p.pToDate 		= $("#pToDate").val();				
+			},
+			dataSrc: function(response) 
+			{				
+				let data = response.RESULT;
+										
+				for (let i=0, length=data.length; i<length; i++)
+				{
+					let etd = $.trim(data[i].PRETD);
+					let etdat = $.trim(data[i].ETDAT);					
+									
+					if (etd == "0000-00-00")
+					{
+						etd = "";						
+					}
+					
+					data[i].ETDAT = etdat;
+					
+					let gubun = data[i].GUBUN;
+					let etdDesc = etd;
+					
+					if ("F" == gubun)
+					{
+						etdDesc = "All available";												
+					}
+					else if ("P" == gubun)
+					{
+						etdDesc = "Partially available";												
+					}
+					
+					data[i].PRETD = etdDesc;
+				};		
+				
+				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				
+				return data;
+			}			
+		},
+		initComplete:function(settings, json) 
+		{			
+			ProgressBar.hide();
+		}
 	});
 	
-	</script>	
+	// Datatable grid 초기 설정 셋업
+	initGridTable($tableObj);
+});
+
+// Search 버튼 클릭
+$("#BTN_search").on("click", function(){		
+	doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
+});
+
+//Input text 엔터 키 입력
+$("#FORM_search input:text").on("keydown", function(event) {
+	if (event.keyCode == 13)
+	{
+		doSearch();
+	};
+});	
+
+$("#BTN_download").on("click", function() {
+	_gridDownload($tableObj, "Backorder_List");
+});
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+}	
+</script>	
 </th:block>
