--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/view.html
@@ -170,24 +170,22 @@ $(function(){
 	    	initGridTable($tableObj);
 	    }		
 	});
-	
-	$("#BTN_pdfDownload").on("click", function() {
-		document.location.href = "/portal/iv/hq/parts/domestic/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=BT08";
-	});	
-	
-	$("#BTN_back").on("click", function() {
-		$("#FORM_search").submit();
-	});
-	
-	$("#BTN_download").on("click", function() {
-		let gridFileDownload = new GridFileDownload($tableObj);
-		gridFileDownload.fileName = "Inquiry_List";
-		gridFileDownload.excelDownload();
-	});
-	
-	$("#BTN_transfer").on("click", function() {
-		Popup.open("/portal/iv/hq/parts/domestic/order/create/transfer_to_order", 500, 200);
-	});	
+});
+
+$("#BTN_pdfDownload").on("click", function() {
+	document.location.href = "/portal/iv/hq/parts/domestic/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=BT08";
+});	
+
+$("#BTN_back").on("click", function() {
+	$("#FORM_search").submit();
+});
+
+$("#BTN_transfer").on("click", function() {
+	Popup.open("/portal/iv/hq/parts/domestic/order/create/transfer_to_order", 500, 200);
+});
+
+$("#BTN_download").on("click", function() {
+	_gridDownload($tableObj, "Inquiry_List");
 });
 
 function doTransferOrder(orderType)
